[tool.poetry]
name = "repl_python3_selenium-youtube-scrape-1"
version = "0.1.0"
description = ""
authors = ["PravallikaMoll1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.2.0"
bs4 = "^0.0.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
